2010-08-04  David Reveman  <davidr@novell.com>

	* projection.cpp (UpdateProjection): Fix translate direction of
	LocalOffsetY.

	* uielement.cpp (DoRender): Only call Render when
	ContextNode::GetCr return a valid cairo context.

2010-08-03  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (UpdateIdleStatus): Renamed from
	UpdateIsDownloading().
	(TileOpened): Don't update IsIdle/IsDownloading status here, wait
	for ::Render(). We don't want IsIdle to be set to true or
	IsDownloading to be set to false before we get a chance to render
	the result.
	(TileFailed): Same.
	(StopDownloading): Same.
	(OnPropertyChanged): Instead of calling UpdateIsDownloading()
	here, Invalidate () and let the next render take care of that.
	(Render): Only ever allow IsIdle to be set to true and
	IsDownloading to be set to false here, *after* we've rendered the
	scene.
	(ProcessTile): Cache a NULL image if we fail to get the tile's
	image surface.

2010-08-03  Jeffrey Stedfast  <fejj@novell.com>

	* bitmapsource.cpp (GetSurface): If the cairo context is NULL,
	then assume that the native surface is an image surface.

	* multiscaleimage.cpp (ProcessTile): Split out from Render(); now
	called from TileOpened() rather than waiting until Render().

2010-08-02  David Reveman  <davidr@novell.com>

	* uielement.cpp: Apply affine transformation in PreRender
	and cleanup intermediate rendering by using GetBitmapExtents
	function.

	* runtime.h:
	* runtime.cpp: Add GetBitmapExtents function to ContextNode
	class.

2010-07-31  David Reveman  <davidr@novell.com>

	* uielement.cpp (ComputeLocalProjection): Canvas Z property
	should be set to NaN when no projection is present.

	* collection.cpp (UIElementZIndexComparer): Use isnan as NaN is
	never equal to Nan.

	* canvas.h:
	* projection.h:
	* projection.cpp: Use NAN, FP_NAN is not a floating point value.

2010-07-30  David Reveman  <davidr@novell.com>

	* collection.cpp (UIElementZIndexComparer): Only compare